<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/sv_func">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.bkredfox.minhhien.matrixcalc_bkredfox.functions"
        android:orientation="horizontal"
        android:divider="@drawable/function_divider_width"
        android:showDividers="middle">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="top|center"
            android:contextClickable="false"
            android:divider="@drawable/function_divider_height"
            android:showDividers="middle">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trace"
                android:layout_gravity="top"
                android:id="@+id/trace"
                android:textColor="@drawable/text_color"
                android:nestedScrollingEnabled="false"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/transpose"
                android:nestedScrollingEnabled="false"
                android:id="@+id/transpose"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/determination"
                android:id="@+id/determination"
                android:nestedScrollingEnabled="false"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orthogonic"
                android:id="@+id/orthogonic"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invert"
                android:id="@+id/invert"
                android:nestedScrollingEnabled="false"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="top|center"
            android:showDividers="middle"
            android:divider="@drawable/function_divider_height">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/add"
                android:textColor="@drawable/text_color"
                android:nestedScrollingEnabled="false"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:id="@+id/minus"
                android:nestedScrollingEnabled="false"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:nestedScrollingEnabled="false"
                android:id="@+id/product"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numProduct"
                android:id="@+id/numProduct"
                android:textColor="@drawable/text_color"
                android:onClick="buttonOnClick"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
