<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Menu"
            android:id="@+id/appName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:alpha="50"
            android:autoText="false"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textIsSelectable="false" />

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:id="@+id/img">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|center_horizontal"
                android:cropToPadding="false"
                android:id="@+id/image"
                android:adjustViewBounds="false"
                android:background="@drawable/icon"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:showDividers="middle"
            android:divider="@drawable/function_divider_height"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:id="@+id/startCalculator"
                android:onClick="startCalculator"
                android:width="200dp"
                android:cursorVisible="false"
                android:contextClickable="false"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#ffffffff" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:id="@+id/setting"
                android:onClick="startSetting"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAlignment="center"
                android:width="200dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:id="@+id/exit"
                android:onClick="exit"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAlignment="center"
                android:width="200dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>